# lluvia

./: requirements.txt
bazel/glsl/: rules.bzl
cpp/core/src/: ComputeNode.cpp
python/src/lluvia/core/: node.pxd  node.pyx  parameter.pxd  parameter.pyx
samples/CannyEdgeDT/: BUILD.bazel
samples/CannyEdgeDT/glsl/: CannyLDT.comp  CannyR.comp
samples/CannyEdgeDT/lua/: CannyLDT.lua  CannyR.lua
samples/CannyEdgeDT/src/: CannyLDT.py
samples/SobelEdgeDT/: BUILD.bazel
samples/SobelEdgeDT/glsl/: LineDetect.comp
samples/SobelEdgeDT/lua/: LineDetect.lua
samples/SobelEdgeDT/src/: SOB_DT.py
